# KFRedirectTool

./: .gitignore  Cargo.toml  LICENSE-TinyUZ2  README.md  clippy.toml  index.html  kfuz2_server.toml
.github/workflows/: build.yml  publish.yml
Docs/: BUILD.md  Benchmark.md  PATCHER.md  VanillaPackages.md  untitled.ui
Docs/Patcher/: TinyUZ2Patcher.py
Docs/TinyUZ2/: TinyUZ2.md  TinyUZ2Patcher.py
crates/kfuz2_cli/: Cargo.toml  README.md
crates/kfuz2_cli/src/: cli.rs  helper.rs  lib.rs  main.rs  types.rs
crates/kfuz2_egui/: Cargo.toml  README.md  build.rs
crates/kfuz2_egui/src/: constants.rs  lib.rs  logic.rs  main.rs
crates/kfuz2_egui/src/ui/: app.rs  icon.rs  logs_viewport.rs  mod.rs  panel_bottom.rs  panel_center.rs  panel_top.rs  theme.rs  toggle_switch.rs
crates/kfuz2_lib/: Cargo.toml  README.md
crates/kfuz2_lib/src/: compressor.rs  constants.rs  decompressor.rs  errors.rs  helper.rs  lib.rs  types.rs  validator.rs
crates/kfuz2_server/: Cargo.toml
crates/kfuz2_server/src/: cache.rs  compressor.rs  config.rs  html_templates.rs  lib.rs  main.rs  server.rs
crates/kfuz2_server/src/server/: file_server.rs  html_templates.rs  mod.rs
crates/tests/: Cargo.toml  cli_compressions.rs  cli_decompressions.rs  cli_random.rs  cli_tests.rs  utility_tests.rs
crates/tests/common/: mod.rs
crates/tests/test_files/incorrect/: KFMutators.u
crates/tests/test_files/reference_incorrect_files/: UCC.u
docs/: Benchmark.md  VanillaPackages.md
files/: kfuz2_server.toml
kfuz2/: .gitignore  Cargo.toml  LICENSE  README.md
kfuz2/src/: cli.rs  compressor.rs  constants.rs  decompressor.rs  lib.rs  main.rs  utility.rs
kfuz2_cli/: README.md
kfuz2_cli/src/: helper.rs  lib.rs
kfuz2_egui/: Cargo.toml  README.md
kfuz2_egui/src/: constants.rs  logic.rs
kfuz2_egui/src/ui/: app.rs  panel_center.rs  panel_top.rs  toggle_switch.rs
kfuz2_gui/: Cargo.toml
kfuz2_gui/src/: main.rs  settings.rs
kfuz2_lib/: Cargo.toml  README.md
kfuz2_lib/src/: compressor.rs  decompressor.rs  errors.rs  helper.rs  types.rs
kfuz2_tkinter_gui/: README.md
kfuz2_tkinter_gui/src/: tkinterGUI.py
requirements/: base.txt  qt.txt
src/: UZ2Tool.py  VanillaPackages.py  main.py  test_UZ2Tool.py  tkinterUZ2.py  uifile.py
src/main/: VanillaPackages.py  test.py  uifile.py
src/resources/: layout.ui
test/: KF-SpaceGlass.rom  RTDMut.u  testCompress.bat
tests/: Cargo.toml  cli_tests.rs  utility_tests.rs
tests/common/: mod.rs
tests/test_files/incorrect/: KFMutators.u.uz2  UCC.u.uz2
