[workspace]
members = [
    "crates//kfuz2_cli",
    "crates//kfuz2_egui",
    "crates//kfuz2_lib",
    "crates//tests",
    "crates/kfuz2_server",
]
resolver = "2"

[workspace.package]
authors = ["Shtoyan", "dkanus"]
edition = "2024"
version = "1.6.3"
rust-version = "1.85"
publish = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
thiserror = "2.*"
serde = { version = "1", default-features = false, features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
