[workspace]
resolver = "2"
members = [
  "crates//kfuz2_cli",
  "crates//kfuz2_egui",
  "crates//kfuz2_lib",
  "crates//tests",
]

[workspace.package]
version = "1.6.3"
authors = ["Shtoyan", "dkanus"]
edition = "2024"
rust-version = "1.85"
publish = false

[workspace.dependencies]
thiserror = "2.*"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

