# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_gui"
version = "1.0.0"
edition = "2021"
authors = ["Shtoyan", "dkanus"]
repository = "https://insultplayers.ru/git/NoobsGoHOE/RustUZ2"
license = "GPL-3.0-or-later"

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
env_logger = "0.10"
toml = "0.7.4"

[dev-dependencies]
serial_test = "*"
