# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
gumdrop = "0.8"
kfuz2_lib = { path = "..//kfuz2_lib" }
