# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
gumdrop = "0.8"
kfuz2_lib = { path = "..//kfuz2_lib" }

[lints]
workspace = true
