# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_egui"
build = "build.rs"
authors.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# log = "0.4"anyhow = "1"
eframe = { version = "0.30.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",           # Enables compiling for x11.
    "wayland",       # Enables wayland support and fixes clipboard issue.
] }
env_logger = "0.*"
image = "0.*"
kfuz2_lib = { path = "..//kfuz2_lib" }
num_cpus = "1"
poll-promise = "0.*"
rayon = "1"
rfd = "0.*"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[build-dependencies]
winres = "0.1.*"
