# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_egui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
publish.workspace = true

[dependencies]
eframe = { version = "0.32", default-features = false, features = [
  "accesskit",  # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts",  # Embed the default egui fonts.
  "glow",  # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",  # Enable restoring app state when restarting the app.
  "wayland",  # Enables wayland support and fixes clipboard issue.
  "x11",  # Enables compiling for x11.
] }
env_logger = "0.*"
image = "0.*"
kfuz2_lib = { path = "..//kfuz2_lib" }
num_cpus = "1"
poll-promise = "0.*"
rayon = "1"
rfd = "0.*"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[build-dependencies]
winres = "0.1.*"

[lints]
workspace = true

