# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_lib"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
description = "Creates uz2 files and does it fast."
license = "GPL-3.0"
repository = "https://github.com/InsultingPros/KFRedirectTool/tree/main/crates/kfuz2_lib"
keywords = ["unreal"]
categories = ["compression"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
sha1_smol = "1"
phf = { version = "0.*", features = ["macros"] }
