# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "kfuz2_lib"
version = "1.6.3"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Creates uz2 files and does it fast."
repository = "https://github.com/InsultingPros/KFRedirectTool/tree/main/crates/kfuz2_lib"
license = "GPL-3.0"
keywords = ["unreal"]
categories = ["compression"]

[dependencies]
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
phf = { version = "0.*", features = ["macros"] }
sha1_smol = "1"
thiserror = { workspace = true }

[lints]
workspace = true

