[package]
name = "kfuz2_server"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
bytes = "1"
toml = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
