[package]
name = "kfuz2_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bytes = "1"
flate2 = { workspace = true }
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
kfuz2_lib = { path = "..//kfuz2_lib" }
percent-encoding = "2"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "1"

[lints]
workspace = true
