# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[test]]
name = "cli_random"
path = "cli_random.rs"

[[test]]
name = "cli_decompressions"
path = "cli_decompressions.rs"

[[test]]
name = "cli_compressions"
path = "cli_compressions.rs"

[dev-dependencies]
escargot = "0.5"
kfuz2_cli = { path = "./../kfuz2_cli" }
kfuz2_lib = { path = "./../kfuz2_lib" }
sha1_smol = "1.*"
tempfile = "3"

[lints]
workspace = true
